--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
+body {
+  font-family: Roboto;
+}
+
 .header {
   font-family: Roboto;
   background-image: url(../img/Prosto.png);
@@ -14,14 +18,14 @@
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
   -ms-grid-rows: 150px 120px 80px 80px 150px 630px;
-  grid-template-rows: 150px 120px 80px 80px 150px 630px;
-  grid-template-areas: "logo . nav" ". title ." ". subtitle ." ". get-started ." ". screen .";
+      grid-template-rows: 150px 120px 80px 80px 150px 630px;
+      grid-template-areas: 'logo . nav' '. title .' '. subtitle .' '. get-started .' '. screen .';
   max-width: 1700px;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header .logo {
@@ -34,7 +38,7 @@
   width: 240px;
   height: 50px;
   -ms-grid-column-align: started;
-  justify-self: started;
+      justify-self: started;
 }
 
 .header .nav {
@@ -43,13 +47,13 @@
   grid-area: nav;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (auto) [5];
-  grid-template-columns: repeat(5, auto);
+  -ms-grid-columns: (auto)[5];
+      grid-template-columns: repeat(5, auto);
   gap: 50px;
   text-decoration: none;
   list-style-type: none;
   -ms-grid-column-align: end;
-  justify-self: end;
+      justify-self: end;
 }
 
 .header .nav .pages {
@@ -72,7 +76,7 @@
   -ms-grid-column: 2;
   grid-area: title;
   -ms-grid-column-align: center;
-  justify-self: center;
+      justify-self: center;
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-column: 1/4;
@@ -93,7 +97,7 @@
   -ms-grid-row: 4;
   grid-row: 4;
   -ms-grid-column-align: center;
-  justify-self: center;
+      justify-self: center;
 }
 
 .header .get-start {
@@ -101,7 +105,7 @@
   -ms-grid-column: 2;
   grid-area: get-started;
   -ms-grid-column-align: center;
-  justify-self: center;
+      justify-self: center;
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-column: 1/4;
@@ -132,6 +136,135 @@
   width: 1054px;
   height: 763px;
   -ms-grid-column-align: center;
-  justify-self: center;
+      justify-self: center;
+}
+
+.icon-section .container {
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: 'left center right';
+  -ms-grid-rows: 200px 200px 200px 200px;
+      grid-template-rows: 200px 200px 200px 200px;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 auto;
+  max-width: 1700px;
+}
+
+.icon-section .img-item {
+  margin-top: 200px;
+  -ms-grid-rows: 800px 100px 100px 150px;
+      grid-template-rows: 800px 100px 100px 150px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-position: 50% 60%;
+}
+
+.icon-section .img-item .title {
+  font-size: 24pt;
+  font-weight: 700;
+  text-align: center;
+  -ms-grid-row: 2;
+  grid-row: 2;
+}
+
+.icon-section .img-item .subtitle {
+  line-height: 1.5;
+  font-size: 18pt;
+  text-align: center;
+  -ms-grid-row: 3;
+  grid-row: 3;
+  padding: 2px 30px;
+  color: #8492af;
+}
+
+.icon-section .img-item .see-more {
+  display: block;
+  margin: 0 auto;
+  width: 250px;
+  text-align: center;
+  -ms-grid-row: 4;
+  grid-row: 4;
+  text-decoration: none;
+  color: #000;
+  font-weight: 700;
+  border: 1px solid #dadee7;
+  padding: 15px 0;
+  border-radius: 30px;
+}
+
+.icon-section .img-item:nth-child(1) {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: left;
+  background-image: url(../img/Manage_first.png);
+  background-repeat: no-repeat;
+  background-size: 20%;
+  -ms-grid-column-align: end;
+      justify-self: end;
+}
+
+.icon-section .img-item:nth-child(1) .title {
+  -ms-grid-row: 2;
+  grid-row: 2;
+}
+
+.icon-section .img-item:nth-child(2) {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: center;
+  background-image: url(../img/Manage_sec.png);
+  background-repeat: no-repeat;
+  background-size: 20%;
+  -ms-grid-rows: 4;
+      grid-template-rows: 4;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  position: relative;
+}
+
+.icon-section .img-item:nth-child(2)::after {
+  content: '';
+  width: 220px;
+  height: 2px;
+  background-color: #dadee7;
+  position: absolute;
+  top: 60%;
+  left: -20%;
+}
+
+.icon-section .img-item:nth-child(2)::before {
+  content: '';
+  width: 220px;
+  height: 2px;
+  background-color: #dadee7;
+  position: absolute;
+  top: 60%;
+  left: 80%;
+}
+
+.icon-section .img-item:nth-child(3) {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: right;
+  background-image: url(../img/Manage_thr.png);
+  background-repeat: no-repeat;
+  background-size: 20%;
+  -ms-grid-rows: 4;
+      grid-template-rows: 4;
+  -ms-grid-column-align: end;
+      justify-self: end;
+  -ms-grid-column-align: start;
+      justify-self: start;
 }
 /*# sourceMappingURL=style.css.map */
