--- a/css/style.css
+++ b/css/style.css
@@ -142,8 +142,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 0 auto;
-  max-width: 1700px;
+  width: 100%;
 }
 
 .icon-section .img-item {
@@ -198,8 +197,6 @@ body {
   background-image: url(../img/Manage_first.png);
   background-repeat: no-repeat;
   background-size: 20%;
-  -ms-grid-column-align: end;
-      justify-self: end;
 }
 
 .icon-section .img-item:nth-child(1) .title {
@@ -218,8 +215,6 @@ body {
   background-size: 20%;
   -ms-grid-rows: 4;
       grid-template-rows: 4;
-  -ms-grid-column-align: center;
-      justify-self: center;
   position: relative;
 }
 
@@ -254,8 +249,6 @@ body {
   background-size: 20%;
   -ms-grid-rows: 4;
       grid-template-rows: 4;
-  -ms-grid-column-align: end;
-      justify-self: end;
   -ms-grid-column-align: start;
       justify-self: start;
 }
@@ -371,5 +364,200 @@ body {
   background-position: -30px 50px;
   width: 800px;
   height: 600px;
+}
+
+.drag-drop {
+  background-image: url(../img/Prosto.png);
+  background-position: 50% 30%;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 700px;
+}
+
+.drag-drop .container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  color: #fff;
+  padding-top: 100px;
+}
+
+.drag-drop .container .in-progres {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-column-align: end;
+      justify-self: end;
+}
+
+.drag-drop .container .in-progres .title-text {
+  font-weight: 500;
+  font-size: 16pt;
+}
+
+.drag-drop .container .in-progres .title-text::after {
+  content: '(3)';
+  padding-left: 10px;
+  opacity: 0.5;
+}
+
+.drag-drop .container .in-progres .img {
+  background-image: url(../img/drag.png);
+  background-position: left;
+  background-repeat: no-repeat;
+  margin-bottom: 20px;
+  width: 400px;
+  height: 100px;
+}
+
+.drag-drop .container .completed {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-column-align: start;
+      justify-self: start;
+}
+
+.drag-drop .container .completed .title-text {
+  font-weight: 500;
+  font-size: 16pt;
+  position: relative;
+}
+
+.drag-drop .container .completed .title-text::after {
+  content: '(2)';
+  padding-left: 10px;
+  opacity: 0.5;
+}
+
+.drag-drop .container .completed .title-text::before {
+  content: '';
+  border: solid #fff;
+  border-width: 0 1px 1px 0;
+  padding: 5px;
+  display: inline-block;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  position: absolute;
+  top: 5px;
+  left: -120px;
+}
+
+.drag-drop .container .completed .img {
+  background-image: url(../img/drag.png);
+  background-position: left;
+  background-repeat: no-repeat;
+  margin-bottom: 20px;
+  width: 400px;
+  height: 100px;
+}
+
+.drag-drop .container .completed .img-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px dashed #fff;
+  margin-bottom: 20px;
+  width: 400px;
+  height: 100px;
+  opacity: 0.5;
+}
+
+.drag-drop .container .img:nth-child(4) {
+  background-position: 50px 20px;
+  width: 500px;
+  height: 120px;
+  position: relative;
+}
+
+.drag-drop .container .img:nth-child(4)::after {
+  content: '';
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 78%;
+  right: 8%;
+  background-image: url(../img/drag_ic.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 50%;
+  background-color: rgba(255, 255, 255, 0.062);
+  border-radius: 50%;
+}
+
+.drag-drop .container .img:nth-child(4)::before {
+  content: '';
+  width: 70px;
+  height: 70px;
+  position: absolute;
+  top: 70%;
+  right: 6%;
+  background-color: rgba(255, 255, 255, 0.123);
+  border-radius: 50%;
+}
+
+.drag-drop .container .text .title {
+  font-weight: 100;
+  font-size: 40pt;
+}
+
+.drag-drop .container .text .wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+}
+
+.drag-drop .container .text .subtitle {
+  font-weight: 300;
+  padding-right: 200px;
+}
+
+.drag-drop .container .text .subtitle:nth-child(2) {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.drag-drop .container .text .subtitle:nth-child(2)::before {
+  content: '';
+  background-image: url(../img/ic.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 15px;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 150%;
+  left: 0px;
+  border: 1px #fff solid;
+  border-radius: 50%;
+}
+
+.drag-drop .container .text .subtitle:nth-child(2)::after {
+  content: '';
+  background-image: url(../img/ic.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 15px;
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 150%;
+  left: 50px;
+  border: 1px #fff solid;
+  border-radius: 50%;
 }
 /*# sourceMappingURL=style.css.map */
