--- a/css/style.css
+++ b/css/style.css
@@ -75,10 +75,6 @@ body {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: title;
-  -ms-grid-column-align: center;
-   justify-self: center;
-  -ms-grid-column: 1;
-  grid-area: title;
       justify-self: center;
   grid-column: 1/4;
   grid-row: 3;
@@ -146,7 +142,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 100%;
+  margin: 0 auto;
+  max-width: 1700px;
 }
 
 .icon-section .img-item {
@@ -201,6 +198,8 @@ body {
   background-image: url(../img/Manage_first.png);
   background-repeat: no-repeat;
   background-size: 20%;
+  -ms-grid-column-align: end;
+      justify-self: end;
 }
 
 .icon-section .img-item:nth-child(1) .title {
@@ -563,5 +562,354 @@ body {
   left: 50px;
   border: 1px #fff solid;
   border-radius: 50%;
+}
+
+.price-list .container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 100px 150px 500px 700px 150px;
+      grid-template-rows: 100px 150px 500px 700px 150px;
+}
+
+.price-list .title {
+  -ms-grid-row: 1;
+  grid-row: 1;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  font-weight: 300;
+  margin-top: 50px;
+}
+
+.price-list .title-text {
+  -ms-grid-column-align: center;
+      justify-self: center;
+  width: 890px;
+  text-align: center;
+  color: #8492af;
+  font-weight: 400;
+}
+
+.price-list .wrapper {
+  background-image: url(../img/Screen.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 50%;
+  width: 100%;
+  position: relative;
+}
+
+.price-list .wrapper .clean-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: started;
+      -ms-flex-align: started;
+          align-items: started;
+  position: absolute;
+  top: 20px;
+  left: 300px;
+}
+
+.price-list .wrapper .clean-info .clean-title {
+  font-weight: 500;
+  font-size: 24px;
+}
+
+.price-list .wrapper .clean-info .clean-title::after {
+  content: '';
+  position: absolute;
+  width: 620px;
+  top: 60px;
+  left: 0px;
+  border-bottom: 2px solid #5584ff;
+}
+
+.price-list .wrapper .clean-info .clean-title::before {
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 52px;
+  left: 620px;
+  background-color: #5584ff;
+  border-radius: 50%;
+  -webkit-box-shadow: 0px 0px 1px 5px #5585ff5b;
+          box-shadow: 0px 0px 1px 5px #5585ff5b;
+}
+
+.price-list .wrapper .clean-info .clean-sub {
+  display: block;
+  color: #8492af;
+  width: 200px;
+}
+
+.price-list .wrapper .easy-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+  position: absolute;
+  bottom: 100px;
+  right: 400px;
+}
+
+.price-list .wrapper .easy-info .easy-title {
+  font-weight: 500;
+  font-size: 24px;
+  position: relative;
+}
+
+.price-list .wrapper .easy-info .easy-title::after {
+  content: '';
+  position: absolute;
+  width: 520px;
+  top: 40px;
+  right: 0px;
+  border-bottom: 2px solid #5584ff;
+}
+
+.price-list .wrapper .easy-info .easy-title::before {
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 31px;
+  right: 500px;
+  background-color: #5584ff;
+  border-radius: 50%;
+  -webkit-box-shadow: 0px 0px 1px 5px #5585ff5b;
+          box-shadow: 0px 0px 1px 5px #5585ff5b;
+}
+
+.price-list .wrapper .easy-info .easy-sub {
+  display: block;
+  color: #8492af;
+  width: 200px;
+  text-align: right;
+}
+
+.price-list .price {
+  margin-top: 60px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr 2fr;
+      grid-template-rows: 1fr 2fr;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+}
+
+.price-list .price-title {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1/4;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  font-weight: 100;
+  font-size: 40pt;
+}
+
+.price-list .plan {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-self: center;
+  background: #fff;
+  -webkit-box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.322);
+          box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.322);
+  width: 300px;
+  height: 400px;
+}
+
+.price-list .plan p {
+  font-weight: bold;
+  font-size: 30pt;
+}
+
+.price-list .plan p::before {
+  content: '$';
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.price-list .plan p::after {
+  content: '/mon';
+  font-size: 20px;
+  font-weight: 100;
+  color: #8492af;
+}
+
+.price-list .plan .services .item {
+  line-height: 30px;
+  position: relative;
+}
+
+.price-list .plan .services .item::before {
+  content: '';
+  position: absolute;
+  background-image: url(../img/checked.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 15px;
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+  width: 30px;
+  height: 30px;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  left: -30px;
+}
+
+.price-list .bronze-list .services .item:nth-child(3)::before {
+  background-image: url(../img/xchecked.png);
+}
+
+.price-list .bronze-list .services .item:nth-child(4)::before {
+  background-image: url(../img/xchecked.png);
+}
+
+.price-list .silver-list .services .item:nth-child(4)::before {
+  background-image: url(../img/xchecked.png);
+}
+
+.price-list .end-text {
+  margin-top: 50px;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  color: #8492af;
+  width: 800px;
+  text-align: center;
+}
+
+.price-list .end-btn {
+  margin-bottom: 100px;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  display: block;
+  width: 80px;
+  text-align: center;
+  color: #fff;
+  text-decoration: none;
+  background-color: #5584ff;
+  border: 1px solid #5584ff;
+  padding: 10px 50px;
+  border-radius: 30px;
+  font-weight: 500;
+  position: relative;
+}
+
+.price-list .end-btn::before {
+  content: '';
+  width: 220px;
+  height: 2px;
+  background-color: #dadee7;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  left: -250px;
+}
+
+.price-list .end-btn::after {
+  content: '';
+  width: 220px;
+  height: 2px;
+  background-color: #dadee7;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  right: -250px;
+}
+
+.footer {
+  font-weight: 300;
+  background-color: #0e1a35;
+  color: #fff;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.footer .copywrite {
+  -ms-grid-column-align: center;
+      justify-self: center;
+  opacity: 0.8;
+}
+
+.footer .link-footer {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (100px)[3];
+      grid-template-columns: repeat(3, 100px);
+  width: 320px;
+  margin-left: 300px;
+  opacity: 0.8;
+}
+
+.footer .link-footer .link {
+  text-decoration: none;
+  color: #fff;
+}
+
+.footer .footer-pages {
+  -ms-grid-column: 3;
+  grid-column: 3;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (30px)[3];
+      grid-template-columns: repeat(3, 30px);
+  padding-left: 0px;
+}
+
+.footer .footer-pages .page-f {
+  background-image: url(../img/facebook.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 20px;
+  height: 20px;
+}
+
+.footer .footer-pages .page-t {
+  background-image: url(../img/twitter.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 20px;
+  height: 20px;
+}
+
+.footer .footer-pages .page-g {
+  background-image: url(../img/google.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 20px;
+  height: 20px;
 }
 /*# sourceMappingURL=style.css.map */
